RESOLVED FIXED41027
Cannot prevent loading of images in <object> tags using onbeforeload.
https://bugs.webkit.org/show_bug.cgi?id=41027
Summary Cannot prevent loading of images in <object> tags using onbeforeload.
Andy Estes
Reported 2010-06-22 17:41:02 PDT
Created attachment 59447 [details] test case In general, a script can prevent loading of resources in <object> tags by handling the beforeload event and calling preventDefault(). See LayoutTests/fast/dom/beforeload/flash-before-load.html. Unfortunately, this does not seem to work when the resource specified in the <object> is an image. See the attached test case.
Attachments
test case (219 bytes, text/html)
2010-06-22 17:41 PDT, Andy Estes
no flags
Patch (5.89 KB, patch)
2010-07-03 01:41 PDT, Andy Estes
no flags
Patch (6.59 KB, patch)
2010-07-06 15:40 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2010-06-22 17:44:46 PDT
Andy Estes
Comment 2 2010-07-03 01:41:11 PDT
Andy Estes
Comment 3 2010-07-03 01:49:21 PDT
Comment on attachment 60443 [details] Patch Oops, I just realied the fallback case isn't handled correctly. I'll try again.
Andy Estes
Comment 4 2010-07-06 15:40:18 PDT
Adam Barth
Comment 5 2010-07-07 03:09:49 PDT
Comment on attachment 60658 [details] Patch Interesting. I verified that updateRenderer() will do the work removed in attach(). Thanks for the patch.
WebKit Commit Bot
Comment 6 2010-07-07 07:37:35 PDT
Comment on attachment 60658 [details] Patch Clearing flags on attachment: 60658 Committed r62664: <http://trac.webkit.org/changeset/62664>
WebKit Commit Bot
Comment 7 2010-07-07 07:37:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.