2010-07-07  Andy Estes  <aestes@apple.com>

Reviewed by Adam Barth.

        Test that loading of images in <object> tags can be cancelled by
        beforeload event handlers.
        https://bugs.webkit.org/show_bug.cgi?id=41027
        <rdar://problem/8120596>

        * fast/dom/beforeload/image-object-before-load-expected.txt: Added.
        * fast/dom/beforeload/image-object-before-load-innerHTML-expected.txt: Added.
        * fast/dom/beforeload/image-object-before-load-innerHTML.html: Added.
        * fast/dom/beforeload/image-object-before-load.html: Added.
2010-07-07  Andy Estes  <aestes@apple.com>

        Reviewed by Adam Barth.

        Allow a beforeload listener to prevent loading of images in <object> tags.
        https://bugs.webkit.org/show_bug.cgi?id=41027
        <rdar://problem/8120596>

        Tests: fast/dom/beforeload/image-object-before-load-innerHTML.html
               fast/dom/beforeload/image-object-before-load.html

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::attach): Do not call
        RenderImage::setCachedImage() at the end of attach(). Instead, allow
        this to happen conditionally after beforeload is dispatched.
        * loader/ImageLoader.cpp:
        (WebCore::ImageLoader::dispatchPendingBeforeLoadEvent): Render fallback
        content if an object's load was cancelled.

Canonical link: https://commits.webkit.org/53579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62664 268f45cc-cd09-0410-ab3c-d52691b4dbfc