WebCore/html/HTMLObjectElement.cpp
@@ -154,12 +154,6 @@ void HTMLObjectElement::attach()
         if (!m_imageLoader)
             m_imageLoader.set(new HTMLImageLoader(this));
         m_imageLoader->updateFromElement();
-        // updateForElement() may have changed us to use fallback content and called detach() and attach().
-        if (m_useFallbackContent)
-            return;
-
-        if (renderer())
-            toRenderImage(renderer())->setCachedImage(m_imageLoader->image());
     }
 }
 
