third_party/WebKit/WebCore/loader/ImageLoader.cpp
@@ -28,6 +28,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "DocLoader.h"
 #include "Document.h"
 #include "Element.h"
+#include "HTMLNames.h"
+#include "HTMLObjectElement.h"
 #include "RenderImage.h"
 
 #if !ASSERT_DISABLED
@@ -256,6 +258,9 @@ void ImageLoader::dispatchPendingBeforeLoadEvent()
         m_image = 0;
     }
     loadEventSender().cancelEvent(this);
+    
+    if (m_element->hasTagName(HTMLNames::objectTag))
+        static_cast<HTMLObjectElement*>(m_element)->renderFallbackContent();
 }
 
 void ImageLoader::dispatchPendingLoadEvent()
